mobile adaptive change

--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
 
 
 
-    <!-- <section class="resume">
+    <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 resume__title">Опыт</h2>
             <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
@@ -182,7 +182,7 @@
                             </div>  
   
                           </li
-                    </ul
+                    </ul>
                 </div>
 
                 <div class="resume__column">
@@ -214,13 +214,11 @@
                             </div>  
   
                           </li>
-                        
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-
 
 
     <section class="skills">
@@ -374,7 +372,7 @@
     </section>
 
 
-
+<!-- 
     <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 portfolio__title">Портфолио</h2>
