mobile adaptive change

--- a/src/index.html
+++ b/src/index.html
@@ -372,7 +372,7 @@
     </section>
 
 
-<!-- 
+
     <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 portfolio__title">Портфолио</h2>
@@ -415,7 +415,7 @@
   
 
 
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="container">
 
             <div class="contacts__wrapper"> 
