mobile adaptive final change

--- a/src/index.html
+++ b/src/index.html
@@ -415,7 +415,7 @@
   
 
 
-    <!-- <section class="contacts">
+    <section class="contacts">
         <div class="container">
 
             <div class="contacts__wrapper"> 
@@ -458,7 +458,7 @@
                 </div>
             </div>
         </div>
-    </section>  -->
+    </section> 
 
 
     <script src="js/script.js"></script>
